goit-markup-hw-03
fix

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -90,9 +94,15 @@
           </ul>
           <h2 class="what-to-do tetle-text-what">Чим ми займаємося</h2>
           <ul class="list what-to-do-flex">
-            <li><img src="./images/job1.jpg" alt="work" width="370" /></li>
-            <li><img src="./images/job2.jpg" alt="work" width="370" /></li>
-            <li><img src="./images/job3.jpg" alt="work" width="370" /></li>
+            <li class="item">
+              <img src="./images/job1.jpg" alt="work" width="370" />
+            </li>
+            <li class="item">
+              <img src="./images/job2.jpg" alt="work" width="370" />
+            </li>
+            <li class="item">
+              <img src="./images/job3.jpg" alt="work" width="370" />
+            </li>
           </ul>
         </div>
       </section>
@@ -100,7 +110,7 @@
         <div class="container">
           <h2 class="team tetle-text-team">Наша команда</h2>
           <ul class="list team-flex">
-            <li>
+            <li class="team-flex-item">
               <img
                 src="./images/team1.jpg"
                 alt="Product Designer"
@@ -109,7 +119,7 @@
               <h3 class="name-team">Ігор Дем'яненко</h3>
               <p class="profession-team">Product Designer</p>
             </li>
-            <li>
+            <li class="team-flex-item">
               <img
                 src="./images/team2.jpg"
                 alt="Frontend Developer"
@@ -118,12 +128,12 @@
               <h3 class="name-team">Ольга Рєпіна</h3>
               <p class="profession-team">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-flex-item">
               <img src="./images/team3.jpg" alt="Marketing" width="270" />
               <h3 class="name-team">Микола Тарасов</h3>
               <p class="profession-team">Marketing</p>
             </li>
-            <li>
+            <li class="team-flex-item">
               <img src="./images/team4.jpg" alt="UI Designer" width="270" />
               <h3 class="name-team">Михайло Єрмаков</h3>
               <p class="profession-team">UI Designer</p>
