--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -61,7 +65,7 @@
             <li><button class="projects" type="button">Маркетинг</button></li>
           </ul>
           <ul class="list work-flex">
-            <li>
+            <li class="item">
               <img
                 src="./images/web-site-texnokrik.jpg"
                 alt="Технокряк"
@@ -70,7 +74,7 @@
               <h2 class="projects-name">Технокряк</h2>
               <p class="projects-work">Веб-сайт</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/design-new-orlean-vs-golden-star.jpg"
                 alt="Постер New Orlean vs Golden Star"
@@ -79,7 +83,7 @@
               <h2 class="projects-name">Постер New Orlean vs Golden Star</h2>
               <p class="projects-work">Дизайн</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/addition-seafood-restaurant.jpg"
                 alt="Ресторан Seafood"
@@ -88,7 +92,7 @@
               <h2 class="projects-name">Ресторан Seafood</h2>
               <p class="projects-work">Додаток</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/marketing-project-prime.jpg"
                 alt="Проєкт Prime"
@@ -97,7 +101,7 @@
               <h2 class="projects-name">Проєкт Prime</h2>
               <p class="projects-work">Маркетинг</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/addition-project-boxes.jpg"
                 alt="Проєкт Boxes"
@@ -106,7 +110,7 @@
               <h2 class="projects-name">Проєкт Boxes</h2>
               <p class="projects-work">Додаток</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/web-site-inspiration-has-no-borders.jpg"
                 alt="Inspiration has no Borders"
@@ -115,7 +119,7 @@
               <h2 class="projects-name">Inspiration has no Borders</h2>
               <p class="projects-work">Веб-сайт</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/design-edition-limited-edition.jpg"
                 alt="Видання Limited Edition"
@@ -124,7 +128,7 @@
               <h2 class="projects-name">Видання Limited Edition</h2>
               <p class="projects-work">Дизайн</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/marketing-project-lab.jpg"
                 alt="Проєкт LAB"
@@ -133,7 +137,7 @@
               <h2 class="projects-name">Проєкт LAB</h2>
               <p class="projects-work">Маркетинг</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/addition-growing-business.jpg"
                 alt="Growing Business"
