goit-markup-hw-03
fix

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
       </div>
     </header>
     <main>
-      <section class="order">
+      <section class="order section">
         <h1 class="order-effective tetle-text-order">
           Ефективні рішення для вашого бізнесу
         </h1>
         <button class="order-button" type="button">Замовити послугу</button>
       </section>
-      <section class="features">
+      <section class="features section">
         <div class="container">
           <ul class="list features-flex">
             <li class="features-element">
@@ -106,7 +106,7 @@
           </ul>
         </div>
       </section>
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="team tetle-text-team">Наша команда</h2>
           <ul class="list team-flex">
