--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
       </div>
     </header>
     <main>
-      <section>
+      <section class="section">
         <div class="container">
           <ul class="list button-flex">
             <li><button class="projects" type="button">Усі</button></li>
